@@ -1,5 +1,8 @@
 Date	Added
 
+2006/09/19
+	* Removed setting ban_spoof_namer (as now invalid chat packets just cause
+	  the sending character to be disconnected). [Skotlex]
 2006/09/18
 	* The new socket update code includes support for two new config settings
 	  (packet_athena.txt): frame_size, which can be used to alter the logic
